<resources>

    <string name="app_name">Teacher Organizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="teacher_description">Teacher description</string>
    <string name="nav_notebook">Notebook</string>
    <string name="nav_journal">Journal</string>
    <string name="nav_timetable_of_classes">Timetable of classes</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_data_management">Data management</string>
    <string name="title_activity_new_note">New note</string>
    <string name="new_note_title_title">Title</string>
    <string name="new_note_body_title">Note</string>
    <string name="save_button_title">Save</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="cm_delete_button">Delete</string>
    <string name="record_delete_confirmation_popup">Record deleted</string>
    <string name="record_save_confirmation_popup">Record saved</string>
    <string name="new_ttoc">New lesson</string>
    <string name="new_ttoc_date_title">Date</string>
    <string name="new_note_notification_checkbox_title">Set notification</string>
    <string name="new_note_notification_type_once_title">Once</string>
    <string name="new_note_notification_type_repeat_title">Repeat</string>
    <string name="new_note_fill_date_or_time_field_toast">Set date and time</string>
    <string name="nav_info">Information</string>
    <string name="note_menu_search_hint">Search</string>
    <string name="new_ttoc_start_time_title">Start time</string>
    <string name="new_ttoc_end_time_title">End time</string>
    <string name="new_ttoc_type_title">Lesson type</string>
    <string name="new_ttoc_subject_title">Lesson subject</string>
    <string name="new_ttoc_group_title">Students group</string>
    <string name="new_ttoc_lecturer_hall_title">Lesson hall</string>
    <string name="info_ttoc_empty_text">There are no scheduled classes on today</string>
    <string name="data_management_catalogs_title">Catalogs</string>
    <string name="data_management_lesson_type_button_text">Types of classes</string>
    <string name="title_activity_lesson_type_catalog">\"Lessons types\" catalog</string>
    <string name="detail_lesson_type_title_text">Lesson type</string>
    <string name="new_record_title">New record</string>
    <string name="data_management_groups_and_students_button_text">Groups and Students</string>
    <string name="data_management_subjects_button_text">Subjects</string>
    <string name="title_activity_subjects_catalog">\"Subjects\" catalog</string>
    <string name="detail_subjects_title_text">Subject</string>
    <string name="title_activity_groups_catalog">\"Groups\" catalog</string>
    <string name="detail_group_title_text">Group</string>
    <string name="title_activity_students_catalog">\"Students\" catalog</string>
    <string name="new_catalog_fname_title">First name</string>
    <string name="new_catalog_sname_title">Second name</string>
    <string name="new_catalog_surname_title">Surname</string>
    <string name="new_catalog_group_title">Group</string>
    <string name="group_delete_confirmation_title">Are you sure you want to delete the group</string>
    <string name="group_delete_confirmation_text">This will also remove all students from this group!</string>
    <string name="infoNotesTitle">Last notes</string>
    <string name="infoTTOCTitle">Timetable on today</string>
    <string name="infoNotesTTOCEmptyText">There will be displayed the latest notes and timetable for today\n
        There are currently no notes and timetable to display</string>
    <string name="infoNotesEmptyText">There will be displayed the latest notes\n
        There are currently no notes to display</string>
    <string name="infoTTOCEmptyText">There will be displayed timetable for today\n
        There is currently no timetable to display</string>
    <string name="data_management_import_export_title">Import/Export</string>
    <string name="data_management_import_data_button_title">Import data</string>
    <string name="data_management_export_data_button_title">Export data</string>
    <string name="import_button_text">Start data import</string>
    <string name="export_button_text">Start data export</string>
    <string name="no_data_in_catalog_toast_message_text">There is no data for export</string>
    <string name="journal_subject_title">Choose subject</string>
    <string name="journal_subject_description">Swipe to left to change subject</string>
    <string name="journal_no_subject_title">There\'re no subjects in catalog</string>
    <string name="journal_no_subject_description">Please fill \"Subjects\" catalog in \"Data management\" menu</string>
    <string name="journal_group_title">Choose group</string>
    <string name="journal_group_description">Swipe to left to choose group</string>
    <string name="journal_no_group_title">There\'re no groups in catalog</string>
    <string name="journal_no_group_description">Please fill \"Groups and Students\" catalog in \"Data management\" menu</string>
    <string name="journal_lesson_type_title">Choose lesson type</string>
    <string name="journal_lesson_type_description">Swipe to left to choose lesson type</string>
    <string name="journal_no_lesson_type_title">There\'re no lesson types in catalog</string>
    <string name="journal_no_lesson_type_description">Please fill \"Lesson types\" catalog in \"Data management\" menu</string>
    <string name="title_activity_journal_detail">Journal</string>
    <string name="journal_select_mark_dialog_title">Select mark</string>
    <string name="data_management_clear_all_data_title">Application data deleting</string>
    <string name="data_management_clear_all_data_button_title">Delete data</string>
    <string name="data_management_clear_all_data_progress_dialog_title">Deleting data</string>
    <string name="data_management_clear_all_data_dialog_message">This action will clear all catalogs and delete all database entries</string>
    <string name="data_management_import_progress_dialog_title">Data import</string>
    <string name="data_management_export_progress_dialog_title">Data export</string>
    <string name="database_clean_confirmaion_popup">The data has been deleted</string>
    <string name="catalog_export_confirmaion_popup">The data has been exported</string>
    <string name="catalog_import_confirmaion_popup">The data has been imported</string>
    <string name="data_management_clear_all_data_dialog_title">Are you sure you want to delete all data?</string>
    <string name="data_management_import_file_extension_error">Incorrect file type</string>
    <string name="export_field_title">File name</string>
    <string name="no_journal_popup">There is no such joural</string>
    <string name="journal_students_dates_column_title">Student\\Date</string>
    <string name="settings_student_rating_coefficient_title">Student rating coefficient</string>
    <string name="settings_student_rating_coefficient_button_title">Student rating coefficient</string>
    <string name="journal_student_rating_column_title">Rating</string>
    <string name="export_enter_file_name_button_text">Please enter a file name</string>
    <string name="application_exit_confirmation">Press again to exit the application</string>
    <string name="navigation_drawer_secondary_text">Your personal assistant</string>
    <string name="new_ttoc_repeat_checkbox_title">Repeate</string>
    <string name="new_ttoc_repeat_weekly_radiobutton_title">Weekly</string>
    <string name="new_ttoc_repeat_by_days_radiobutton_title">By days</string>
</resources>
