<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DataManagementActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_management_catalogs_title"
            android:id="@+id/textView7"
            android:textSize="14sp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.DropDownHint" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/data_management_lesson_type_catalog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/data_management_lesson_type_button_text"
            android:textSize="16sp"
            custom:pb_colorNormal="@color/md_blue_grey_100"
            custom:pb_colorPressed="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/data_management_subjects_catalog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/data_management_subjects_button_text"
            android:textSize="16sp"
            custom:pb_colorNormal="@color/md_blue_grey_100"
            custom:pb_colorPressed="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/data_management_groups_and_students_catalog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/data_management_groups_and_students_button_text"
            android:textSize="16sp"
            custom:pb_colorNormal="@color/md_blue_grey_100"
            custom:pb_colorPressed="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_management_import_export_title"
            android:id="@+id/textView8"
            android:textSize="14sp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.DropDownHint" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/data_management_import_data_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/data_management_import_data_button_title"
            android:textSize="16sp"
            custom:pb_colorNormal="@color/md_blue_grey_100"
            custom:pb_colorPressed="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/data_management_export_data_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/data_management_export_data_button_title"
            android:textSize="16sp"
            custom:pb_colorNormal="@color/md_blue_grey_100"
            custom:pb_colorPressed="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_management_clear_all_data_title"
            android:id="@+id/textView9"
            android:textSize="14sp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.DropDownHint" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/data_management_clear_all_data_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/data_management_clear_all_data_button_title"
            android:textSize="16sp"
            custom:pb_colorNormal="@color/md_blue_grey_100"
            custom:pb_colorPressed="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" />

    </LinearLayout>

</LinearLayout>
